correct align mainNav

--- a/src/css/followersList.css
+++ b/src/css/followersList.css
@@ -38,7 +38,7 @@ body {
 }
 
 .navList {
-  width: 390px;
+  width: fit-content;
   margin: 0 auto;
 }
 
